# mkcal

./: .gitignore  CMakeLists.txt  README  libmkcal-qt5.pc  libmkcal.pc  mkcal-0.3.11-disable-plugins.patch  mkcal-0.3.11-drop-tracker.patch  mkcal-0.3.11-no-timed.patch  mkcal-0.3.8-no-mtf.patch  mkcal-qt5.spec  mkcal-qt5.yaml  mkcal.changes  mkcal.prf  mkcal.pro  mkcal.spec  mkcal.yaml
debian/: api  changelog  control  files  libmkcal-dev.install  libmkcal.aegis  libmkcal.install  postinst  rules
doc/: CMakeLists.txt  Makefile  doc.pro  libmkcal.cfg
plugins/: CMakeLists.txt  plugins.pro
plugins/defaultinvitationplugin/: CMakeLists.txt  defaultinvitationplugin.cpp  defaultinvitationplugin.h  defaultinvitationplugin.pro  transmitemail.cpp  transmitemail.h
rpm/: mkcal-qt5.privileges  mkcal-qt5.spec  mkcal-qt5.yaml  mkcal.spec
src/: CMakeLists.txt  alarmhandler.cpp  alarmhandler_p.h  asyncsqlitestorage.cpp  asyncsqlitestorage.h  calendarhandler.cpp  calendarhandler_p.h  calendarstorage.cpp  calendarstorage.h  compatibility.cpp  compatibility.h  config-mkcal.h  directorystorage.cpp  directorystorage.h  directstorageinterface.h  dummystorage.h  extendedcalendar.cpp  extendedcalendar.h  extendedstorage.cpp  extendedstorage.h  extendedstorageobserver.h  invitationhandler.cpp  invitationhandler.h  invitationhandlerif.h  logging.cpp  logging_p.h  mkcal_export.h  multicalendarstorage.cpp  multicalendarstorage.h  notebook.cpp  notebook.h  semaphore_p.cpp  semaphore_p.h  servicehandler.cpp  servicehandler.h  servicehandlerif.h  singlesqlitebackend.cpp  singlesqlitebackend_p.h  sqlitecalendarstorage.cpp  sqlitecalendarstorage.h  (+19 more)
src/qtlockedfile/: README.TXT  common.pri
src/qtlockedfile/doc/html/: index.html  qtlockedfile-members.html  qtlockedfile.html  qtlockedfile.index  qtlockedfile.qch  qtlockedfile.qhp
src/qtlockedfile/example/: example  example.cpp
src/qtlockedfile/src/: qtlockedfile.cpp  qtlockedfile_unix.cpp
tests/: CMakeLists.txt  compat.h  tests.pro  tests.xml  tst_async.cpp  tst_async.h  tst_backend.cpp  tst_load.cpp  tst_perf.cpp  tst_perf.h  tst_sqlitecalendarstorage.cpp  tst_sqliteformat.cpp  tst_storage.cpp  tst_storage.h
tools/: CMakeLists.txt  tools.pro
tools/mkcaltool/: CMakeLists.txt  main.cpp  mkcaltool.cpp  mkcaltool.h  mkcaltool.pro
